--- a/package.json
+++ b/package.json
@@ -23,15 +23,15 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.1",
-    "pg": "^8.7.3",
-    "pg-format": "^1.0.4",
-    "supertest": "^6.2.4"
+    "pg": "^8.7.3"
   },
   "devDependencies": {
     "husky": "^7.0.0",
     "jest": "^27.5.1",
     "jest-extended": "^2.0.0",
-    "jest-sorted": "^1.0.14"
+    "jest-sorted": "^1.0.14",
+    "pg-format": "^1.0.4",
+    "supertest": "^6.2.4"
   },
   "jest": {
     "setupFilesAfterEnv": [
