--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "bc-nc-games",
   "main": "index.js",
   "scripts": {
-    "start": "node listen.js",
+    "start": "npm install pg-format && node listen.js",
     "setup-dbs": "psql -f ./db/setup.sql",
     "seed": "node ./db/seeds/run-seed.js",
     "test": "jest",
     "prepare": "husky install",
-    "seed:prod": "npm install pg-format NODE_ENV=production DATABASE_URL=$(heroku config:get DATABASE_URL) npm run seed"
+    "seed:prod": "NODE_ENV=production DATABASE_URL=$(heroku config:get DATABASE_URL) npm run seed"
   },
   "repository": {
     "type": "git",
